--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,14 @@ body {
   font-family: "Raleway", sans-serif;
   font-weight: 400;
 }
+
+.Toastify__toast--default {
+  box-shadow: 0px 8px 12px rgba(9, 30, 66, 0.15);
+  width: fit-content;
+  padding: 0;
+  margin: 0 auto 1rem;
+}
+
+.Toastify__toast-body {
+  padding: 0;
+}
